Bug 44616 - webkit won't render frames of table borders of Calc/HTML.
Summary: webkit won't render frames of table borders of Calc/HTML.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.4.4 release
Hardware: Other Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:3.5
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-10 01:38 UTC by Takaaki Higuchi
Modified: 2013-11-27 15:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
rendering result comparison of Firefox and Chrome (3.80 KB, image/png)
2012-01-10 01:38 UTC, Takaaki Higuchi
Details
.ods and .html (6.64 KB, application/zip)
2012-01-10 08:58 UTC, Takeshi Abe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Takaaki Higuchi 2012-01-10 01:38:36 UTC
Created attachment 55374 [details]
rendering result comparison of Firefox and Chrome

webkit won't render frames of table borders of Calc/HTML.

The table frame borders are correctly rendered by Firefox/IE. But Chrome and other webkit based browsers(Safari) won't render. See attachment image.

We found in the HTML output of Calc includes <TABLE> tag, and it states "FRAME=VOID". If this option is removed, webkit can correctly render frames of tables.

This is reported by Kenta Terado at discuss@ja.libreoffice.org on January 7th. And I confirmed it by reproducing it.

Though this is a web-browser issue, and not exactly a bug of LibreOffice Calc, I suggest removing "FRAME=VOID" is easy way to solve this problem.
Comment 1 Takeshi Abe 2012-01-10 08:40:02 UTC
Hi Takaaki,

Could you provide its original document .ods before saving it as .html?
Thanks a lot.
Comment 2 Takeshi Abe 2012-01-10 08:58:53 UTC
Created attachment 55384 [details]
.ods and .html

Nevermind, I have reproduced the behaviour with attached docs.
Also found Opera 11.60 would not render the frame border.

(In reply to comment #1)
> Hi Takaaki,
> 
> Could you provide its original document .ods before saving it as .html?
> Thanks a lot.
Comment 3 Kohei Yoshida 2012-01-10 13:39:54 UTC
Pushed the patch from Abe-san.  This will be fixed in 3.5 RC1 or Beta4, whichever it will be named.