fdo#44616: drop attributes FRAME and RULES of <table> for HTML 3.2

This fixes fdo#44616.
HTML 3.2 does not have these attributes:
http://www.w3.org/TR/REC-html32